kubernetes_manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xox-game
  namespace: production
  labels:
    app.kubernetes.io/name: xox-game
    app.kubernetes.io/component: frontend
    app.kubernetes.io/managed-by: github-actions
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1          # Spin up exactly 1 new pod before dropping old ones
      maxUnavailable: 0    # Ensures baseline capacity is always functional
  selector:
    matchLabels:
      app: xox-game
  template:
    metadata:
      labels:
        app: xox-game
    spec:
      #securityContext:
        #runAsNonRoot: true
        #runAsUser: 101 
        #fsGroup: 101
      containers:
      - name: xox-game
        image: IMAGE_PLACEHOLDER # Dynamically replaced by GitHub Actions with your ECR image tag
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          name: http
        
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 20

        resources:
          requests:
            memory: "32Mi"
            cpu: "100m"
          limits:
            memory: "64Mi"
            cpu: "200m"

---

apiVersion: v1
kind: Service
metadata:
  name: xox-game-service
  namespace: production
  labels:
    app.kubernetes.io/name: xox-game
spec:
  type: ClusterIP 
  selector:
    app: xox-game
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: xox-game-ingress
  namespace: production
  annotations:
    # Signals the AWS Load Balancer Controller to build a public ALB
    alb.ingress.kubernetes.io/scheme: internet-facing
    # Directs traffic over the VPC network straight to pod private IPs
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: xox-game-service
                port:
                  number: 80
